additional column setup, etc. for the 1st page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Tykoon 2.0</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -27,16 +27,21 @@
 
         <!-- Add your site or application content here -->
         <div data-role="page" id="tour" class="clearfix">
-          <div class="marketing">
-            <p>Here is our really awesome page one</p>
-          </div>
-          <div class="signIn">
-            <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" data-transition="slide">Get Started</a>
-          </div>
+            <div class="ui-grid-a">
+                <div class="ui-block-a introTour">
+                    <p>Here is our really awesome page one</p>
+                </div>
+                <div class="ui-block-b signIn">
+                    <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true">Get Started</a>
+                </div>
+            </div>
         </div>
 
         <div data-role="page" id="startTasks">
-            <p>Here is our really awesome page two</p>
+            <div data-role="header" data-position="fixed">Tykoon header</div>
+            <div data-role="content">
+                <p>Here is our really awesome page two</p>
+            </div>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
