--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
+        <script src="js/task.js"></script>
+        <script src="js/child.js"></script>
         <script src="js/tykoon.js"></script>
 
 
