--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             
             <!-- 3 col layout -->
-            <div class="ui-grid-b">
+            <div class="ui-grid-b tasksPayGoals">
                 <div class="ui-block-a">
                     <div data-role="content">
                         <h2>Tasks</h2>
