hacking in resize fix for jq bug

--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
                 
                 <!-- Sign Up column -->
                 <div class="ui-block-b signIn">
-                    <h2>New Users</h2>
-                    <p>We just need a little info to help you customize a plan for your kids!</p>
-                    <form method="post" id="getStartedForm">
-                        <label for="getStartedFormChildFirstName" data-theme="a">Child First Name</label>
-                        <input type="text" name="getStartedFormChildFirstName" id="getStartedFormChildFirstName" data-theme="a"/>
-                        <label for="getStartedFormChildBirthday">Birthday</label>
-                        <input type="date" id="getStartedFormChildBirthday" data-theme="a"/>
-                    </form>
-                    <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" id="getStartedFormSubmit">Get Started</a>
-                </div>
+                    <div data-role="content">
+                        <h2>New Users</h2>
+                        <p>We just need a little info to help you customize a plan for your kids!</p>
+                        <form method="post" id="getStartedForm">
+                            <label for="getStartedFormChildFirstName" data-theme="a">Child First Name</label>
+                            <input type="text" name="getStartedFormChildFirstName" id="getStartedFormChildFirstName" data-theme="a"/>
+                            <label for="getStartedFormChildBirthday">Birthday</label>
+                            <input type="date" id="getStartedFormChildBirthday" data-theme="a"/>
+                        </form>
+                        <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" id="getStartedFormSubmit">Get Started</a>
+                    </div>
+                 </div>
             </div>
             
         </div><!-- END tour page -->
