starting to add tasks

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                             <input type="text" name="getStartedFormChildFirstName" id="getStartedFormChildFirstName" data-theme="a"/>
                             <label for="getStartedFormChildBirthday">Birthday</label>
                             <input type="date" id="getStartedFormChildBirthday" data-theme="a"/>
+                            <label for="getStartedFormChildGender">Gender</label>
+                            <select id="getStartedFormChildGender" data-theme="a">
+                                <option value="b">Boy</option>
+                                <option value="g">Girl</option>
+                            </select>
                         </form>
                         <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" id="getStartedFormSubmit">Get Started</a>
                     </div>
@@ -99,6 +104,10 @@
                                 <label class="title" for="addTasksFormTaskName">What do you want <span class="childFirstName">[firstName]</span> to do?</label>
                                 <input type="text" id="addTasksFormTaskName" data-theme="a" placeholder="Type here to create your own" />
                             </form>
+                        </div>
+
+                        <div class="taskCatalog clearfix">
+
                         </div>
 
                     </div>
