fixed child signature call

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
+        <script src="js/cannedObjects/cannedTasks.js"></script>
+        <script src="js/cannedObjects/cannedProducts.js"></script>
+
         <script src="js/task.js"></script>
         <script src="js/child.js"></script>
         <script src="js/tykoon.js"></script>
