--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                             <input type="date" id="getStartedFormChildBirthday" data-theme="a"/>
                             <label for="getStartedFormChildGender">Gender</label>
                             <select id="getStartedFormChildGender" data-theme="a">
-                                <option value="b">Boy</option>
-                                <option value="g">Girl</option>
+                                <option value="m">Boy</option>
+                                <option value="f">Girl</option>
                             </select>
                         </form>
                         <a href="#startTasks" data-role="button"  data-theme="a" data-inline="true" id="getStartedFormSubmit">Get Started</a>
@@ -100,6 +100,8 @@
                                 <label class="title" for="addTasksFormTaskName">What do you want <span class="childFirstName">[firstName]</span> to do?</label>
                                 <input type="text" id="addTasksFormTaskName" data-theme="a" placeholder="Type here to create your own" />
                             </form>
+                            <hr />
+                            <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
                         </div>
 
                         <div class="taskCatalog clearfix">
