--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/onboardingFlow.css">
         <link rel="stylesheet" href="themes/basicTheme.min.css" />
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.css">
+        <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile.structure-1.3.1.css"> -->
+        <link rel="stylesheet" href="css/vendor/jquery.mobile.structure-1.3.1.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -120,9 +121,10 @@
             
         </div><!-- END startTasks page -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <!-- script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+        <!-- script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script -->
+        <script src="js/vendor/jquery.mobile-1.3.1.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
