made a js variable shortcut for 'currentChild'; cleaned it so we can switch currentChild and populate the page again; also created fixed child test data at the bottom of tykoon.js - comment out to run create your own child from the start page.

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
                     <div class="taskCatalog clearfix">
                         <div class="title">Popular tasks for <span class="childAge">[#]</span> year old <span class="childGender">[gender]</span>s</div>
+                        <div class="tasks"></div>
                     </div>
 
                 </div>
@@ -140,7 +141,7 @@
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
+            g.src='http://www.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
     </body>
