--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                         <!-- Task HTML template for populating the UI from the DB -->
                         <div class="taskTemplate">
                             <div class="taskItem clearfix">
-                                <div class="addButton"><input type="button" value="+" data-theme="a" /></div>
                                 <div class="taskDetails">
-                                    <div class="title"></div>
+
+                                    <div class="title"><a href="#configureTasks" data-rel="dialog">+</a><span></span></div>
                                     <div class="numKids"><span></span> kids are doing this</div>
                                 </div>
                             </div>
@@ -132,6 +132,38 @@
             
             
         </div><!-- END startTasks page -->
+
+        <div data-role="page" id="configureTasks">
+            <div class="taskTitle"></div>
+            <div class="taskContent">
+                <label for="configureTasksRepeats">Repeats</label>
+                <select id="configureTasksRepeats">
+                    <option value="1">yes</option>
+                    <option value="0">no</option>
+                </select>
+                <label for="configureTasksWeeklyOn">Weekly on</label>
+                <select multiple="multiple" id="configureTasksWeeklyOn">
+                    <option value="mon">Mon</option>
+                    <option value="mon">Tues</option>
+                    <option value="mon">Wed</option>
+                    <option value="mon">Thur</option>
+                    <option value="mon">Fri</option>
+                    <option value="mon">Sat</option>
+                    <option value="mon">Sun</option>
+                </select>
+                <label for="configureTasksDueDate">Due date</label>
+                <input type="date" id ="configureTasksDueDate">
+                <label for="configureTasksPayment">Payment</label>
+                <select id="configureTasksPayment">
+                    <option value="allowance">Allowance</option>
+                    <option value="responsibility">Responsibility</option>
+                </select>
+                <p>Goes towards weekly allowance</p>
+                <label for="configureTasksHowMuch">How Much?</label>
+                <input type="text" id="configureTasksHowMuch">
+                <button id="configureTasksAddIt">Add it</button>
+            </div>
+        </div>
 
         <!-- script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
