styled header in the popup

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <!-- start configureTasks -->
             <div data-role="popup" id="configureTasks">
                 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-                <div class="taskTitle"></div>
+                <div class="taskTitle ui-bar ui-bar-a"></div>
                 <div class="taskContent" data-role="content">
                     <label for="configureTasksRepeats">Repeats</label>
                     <select id="configureTasksRepeats">
