hooking up the cover slide and arrow side switch when the "Done setting Tasks" button is tapped

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <label for="getStartedFormChildFirstName" data-theme="a">Child First Name</label>
                             <input type="text" name="getStartedFormChildFirstName" id="getStartedFormChildFirstName" data-theme="a"/>
                             <label for="getStartedFormChildBirthday">Birthday</label>
-                            <input type="date" id="getStartedFormChildBirthday" data-theme="a"/>
+                            <input type="date" id="getStartedFormChildBirthday" data-theme="a" />
                             <label for="getStartedFormChildGender">Gender</label>
                             <fieldset data-role="controlgroup" data-type="horizontal" id="getStartedFormChildGender" data-theme="a">
                                 <input type="radio" name="getStartedFormChildGender" id="genderBoy" value="m"  data-theme="a" />
@@ -133,7 +133,7 @@
             
             <div data-role="footer" class="ui-bar">
                 After you have added some tasks and reviewed pay, move on to set some goals
-                <input type="button" value="Done setting Tasks" data-icon="arrow-r" data-iconpos="right" />
+                <input type="button" id="doneWithTasksButton" value="Done setting Tasks" data-icon="arrow-r" data-iconpos="right" />
             </div>
             
             <!-- start configureTasks -->
