--- a/index.html
+++ b/index.html
@@ -150,10 +150,13 @@
                             <!-- Product HTML template for populating the UI from the DB -->
                             <div class="productTemplate">
                                 <div class="productItem clearfix">
-                                    <div class="addButton"><input type="button" data-icon="plus" data-iconpos="notext" data-theme="a" /></div>
+                                    <div class="productImage">
+                                        <img class="thumbnail" />
+                                        <input type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
+                                    </div>
                                     <div class="productDetails">
                                         <div class="title"></div>
-                                        <div class="numKids"><span></span> kids are doing this</div>
+                                        <div class="numKids"><span></span> kids saving for this</div>
                                     </div>
                                 </div>
                             </div>
