fixed position of the "details" icon on products

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 <div class="productItem clearfix">
                                     <div class="productImage">
                                         <img class="thumbnail" />
-                                        <input type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
+                                        <input class="productDetailsIcon" type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
                                     </div>
                                     <div class="productDetails">
                                         <div class="title"></div>
