vertically centering images in productDetails

--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
                             <!-- Product HTML template for populating the UI from the DB -->
                             <div class="productTemplate">
                                 <div class="productItem clearfix">
-                                    <div class="productImage">
-                                        <img class="thumbnail" />
+                                    <div class="productImage verticalWrapper">
+                                        <div class="verticalMiddle">
+                                            <img class="thumbnail" />
+                                        </div>
                                         <input class="productDetailsIcon" type="button" data-icon="search" data-iconpos="notext" data-theme="a" />
                                     </div>
                                     <div class="productDetails">
